--- a/templates/survey_result.html
+++ b/templates/survey_result.html
@@ -99,7 +99,7 @@
                             <div class="survey-result-carousel-border carousel-item active h-100 m-0 row">
                               <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12 p-0">
                                 <div class="dog-img-container h-100 justify-content-center align-items-center d-flex">
-                                  <img src="{{ ranking_order[0]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[0]['desertionNo'] }}" onclick="moveToSelectedDog(this)">
+                                  <img src="{{ ranking_order[0]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[0]['desertionNo'] }}" score_diff="{{ ranking_order[0]['trait_score_diff'] }}" onclick="moveToSelectedDog(this)">
                                 </div>
 
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -170,7 +170,7 @@
                             <div class="survey-result-carousel-border carousel-item h-100 m-0 row">
                               <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12 p-0">
                                 <div class="dog-img-container justify-content-center align-items-center d-flex">
-                                  <img src="{{ ranking_order[1]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[1]['desertionNo'] }}" onclick="moveToSelectedDog(this)">
+                                  <img src="{{ ranking_order[1]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[1]['desertionNo'] }}" score_diff="{{ ranking_order[1]['trait_score_diff'] }}" onclick="moveToSelectedDog(this)">
                                 </div>
 
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -241,7 +241,7 @@
                             <div class="survey-result-carousel-border carousel-item h-100 m-0 row">
                               <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12 p-0">
                                 <div class="dog-img-container justify-content-center align-items-center d-flex">
-                                  <img src="{{ ranking_order[2]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[2]['desertionNo'] }}" onclick="moveToSelectedDog(this)">
+                                  <img src="{{ ranking_order[2]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[2]['desertionNo'] }}" score_diff="{{ ranking_order[2]['trait_score_diff'] }}" onclick="moveToSelectedDog(this)">
                                 </div>
 
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -312,7 +312,7 @@
                             <div class="survey-result-carousel-border carousel-item h-100 m-0 row">
                               <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12 p-0">
                                 <div class="dog-img-container justify-content-center align-items-center d-flex">
-                                  <img src="{{ ranking_order[3]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[3]['desertionNo'] }}" onclick="moveToSelectedDog(this)">
+                                  <img src="{{ ranking_order[3]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[3]['desertionNo'] }}" score_diff="{{ ranking_order[3]['trait_score_diff'] }}" onclick="moveToSelectedDog(this)">
                                 </div>
 
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -383,7 +383,7 @@
                             <div class="survey-result-carousel-border carousel-item h-100 m-0 row">
                               <div class="carousel-dog-img-container justify-content-center align-items-center d-flex col-12 p-0">
                                 <div class="dog-img-container justify-content-center align-items-center d-flex">
-                                  <img src="{{ ranking_order[4]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[4]['desertionNo'] }}" onclick="moveToSelectedDog(this)">
+                                  <img src="{{ ranking_order[4]['popfile'] }}" class="carousel-dog-img" alt="" id="{{ ranking_order[4]['desertionNo'] }}" score_diff="{{ ranking_order[4]['trait_score_diff'] }}" onclick="moveToSelectedDog(this)">
                                 </div>
 
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
