--- a/static/css/dog_info.css
+++ b/static/css/dog_info.css
@@ -306,14 +306,14 @@ select.filter-breed {
 }
 
 .check_btn {
-  --bs-btn-color: #339900;
+  --bs-btn-color: #fff;
   --bs-btn-border-color: #339900;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #339900;
+  --bs-btn-hover-color: #339900;
+  --bs-btn-hover-bg: #fff;
   --bs-btn-hover-border-color: #339900;
   --bs-btn-focus-shadow-rgb: 33, 37, 41;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #339900;
+  --bs-btn-active-color: #339900;
+  --bs-btn-active-bg: #fff;
   --bs-btn-active-border-color: #339900;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #339900;
@@ -321,21 +321,21 @@ select.filter-breed {
   --bs-btn-disabled-border-color: #339900;
   --bs-gradient: none;
 
-  background-color: #FEFAF6;
+  background-color: #339900;
   /* color: black; */
   border: #339900 2px solid;
   border-radius: 1rem;
 }
 
 .exclamation_btn {
-  --bs-btn-color: #FFCC00;
+  --bs-btn-color: #fff;
   --bs-btn-border-color: #FFCC00;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #FFCC00;
+  --bs-btn-hover-color: #FFCC00;
+  --bs-btn-hover-bg: #fff;
   --bs-btn-hover-border-color: #FFCC00;
   --bs-btn-focus-shadow-rgb: 33, 37, 41;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #FFCC00;
+  --bs-btn-active-color: #FFCC00;
+  --bs-btn-active-bg: #fff;
   --bs-btn-active-border-color: #FFCC00;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #FFCC00;
@@ -343,21 +343,21 @@ select.filter-breed {
   --bs-btn-disabled-border-color: #FFCC00;
   --bs-gradient: none;
 
-  background-color: #FEFAF6;
+  background-color: #FFCC00;
   /* color: black; */
   border: #FFCC00 2px solid;
   border-radius: 1rem;
 }
 
 .x_btn {
-  --bs-btn-color: #CC3300;
+  --bs-btn-color: #fff;
   --bs-btn-border-color: #CC3300;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #CC3300;
+  --bs-btn-hover-color: #CC3300;
+  --bs-btn-hover-bg: #fff;
   --bs-btn-hover-border-color: #CC3300;
   --bs-btn-focus-shadow-rgb: 33, 37, 41;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #CC3300;
+  --bs-btn-active-color: #CC3300;
+  --bs-btn-active-bg: #fff;
   --bs-btn-active-border-color: #CC3300;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #CC3300;
@@ -365,7 +365,7 @@ select.filter-breed {
   --bs-btn-disabled-border-color: #CC3300;
   --bs-gradient: none;
 
-  background-color: #FEFAF6;
+  background-color: #CC3300;
   /* color: black; */
   border: #CC3300 2px solid;
   border-radius: 1rem;
