--- a/static/css/dog_info.css
+++ b/static/css/dog_info.css
@@ -433,14 +433,14 @@ select.filter-breed {
 }
 
 .navbar_adopt_btn {
-  --bs-btn-color: #19B394;
+  --bs-btn-color: #fff;
   --bs-btn-border-color: #19B394;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #19B394;
+  --bs-btn-hover-color: #19B394;
+  --bs-btn-hover-bg: #fff;
   --bs-btn-hover-border-color: #19B394;
   --bs-btn-focus-shadow-rgb: 33, 37, 41;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #19B394;
+  --bs-btn-active-color: #19B394;
+  --bs-btn-active-bg: #fff;
   --bs-btn-active-border-color: #19B394;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #19B394;
@@ -448,7 +448,7 @@ select.filter-breed {
   --bs-btn-disabled-border-color: #19B394;
   --bs-gradient: none;
 
-  background-color: #FEFAF6;
+  background-color: #19B394;
   /* color: black; */
   border: #19B394 2px solid;
   border-radius: 2rem;
