--- a/templates/survey_result.html
+++ b/templates/survey_result.html
@@ -467,6 +467,7 @@
 
                           <div class="rec_list d-none" id="{{ ranking_order[0]['rec_list'] }}"></div>
                           <div class="rec_list_score d-none" id="{{ ranking_order[0]['rec_list_score'] }}"></div>
+                          <div class="tot_trait_score_diff d-none" id="{{ ranking_order[0]['tot_trait_score_diff'] }}"></div>
 
                         </div>
                       </div>
